--- a/index.html
+++ b/index.html
@@ -25,22 +25,22 @@
             <div class="upgrade">
                 <h2>Пассивная добыча</h2>
                 <p>Цена: 1000 капель</p>
-                <button id="buy-passive">Купить</button>
+                <button id="buy-passive" class="btn">Купить</button>
             </div>
             <div class="upgrade">
                 <h2>Увеличение прибыли</h2>
                 <p>Цена: 2000 капель</p>
-                <button id="buy-profit">Купить</button>
+                <button id="buy-profit" class="btn">Купить</button>
             </div>
         </div>
         <div id="other-pages" class="hidden">
             <p>(в разработке)</p>
         </div>
         <div class="buttons">
-            <button id="mine-button">Mine</button>
-            <button id="store-button">Store</button>
-            <button id="refs-button">Refs</button>
-            <button id="earn-button">Earn</button>
+            <button id="mine-button" class="btn">Mine</button>
+            <button id="store-button" class="btn">Store</button>
+            <button id="refs-button" class="btn">Refs</button>
+            <button id="earn-button" class="btn">Earn</button>
         </div>
     </div>
     <script src="app.js"></script>
