--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="container">
         <div class="energy-bar">
             <div class="energy-fill" id="energy-fill"></div>
-            <span id="energy-text">100/100</span>
+            <span id="energy-text">Energy: 100/100</span>
         </div>
         <div id="main-page">
             <div class="score">
@@ -23,13 +23,17 @@
         </div>
         <div id="store-page" class="hidden">
             <div class="upgrade">
-                <h2>Пассивная добыча</h2>
-                <p>Цена: 1000 капель</p>
+                <div class="upgrade-content">
+                    <h2>Пассивная добыча</h2>
+                    <p>Цена: 1000 капель</p>
+                </div>
                 <button id="buy-passive" class="btn">Купить</button>
             </div>
             <div class="upgrade">
-                <h2>Увеличение прибыли</h2>
-                <p>Цена: 2000 капель</p>
+                <div class="upgrade-content">
+                    <h2>Увеличение прибыли</h2>
+                    <p>Цена: 2000 капель</p>
+                </div>
                 <button id="buy-profit" class="btn">Купить</button>
             </div>
         </div>
@@ -46,5 +50,6 @@
     <script src="app.js"></script>
 </body>
 </html>
+
 
 
